fixed info screen text size on tablets and phones

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,6 +9,7 @@ body {
     justify-content: center;
     height: 100vh;
     background-color: #293E6A;
+    overflow-x: hidden;
 }
 .phone {
     display: flex;
@@ -85,6 +86,16 @@ button {
     outline: none;
     cursor: pointer;
 }
+@media only screen and (max-width: 700px){
+    #text {
+        width: 100%;
+    }
+    
+    #text > p {
+        font-size: 20px;
+    }
+}
+
 @media only screen and (max-width: 400px){
     .phone {
         height: 0px;
@@ -96,6 +107,7 @@ button {
         left: 50%;
         right: 50%;
         margin-left: -10px;
+        margin-bottom: 20px;
     }
 
     #help {
